--- a/src/assets/tailwind.less
+++ b/src/assets/tailwind.less
@@ -7,6 +7,16 @@ body{
     background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
+#app .nav{
+    font-weight: 300;
+    color: #000;
+    .active{
+        // color: #ff0000;
+        font-weight: 700;
+        color: #ff0000;
+    }
+}
+
 .lg-block{
     width: 300px;
     height: 400px;
